--- a/work/scripts/test.ipynb
+++ b/work/scripts/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "23e9dd00-74ea-4032-bc1a-c45587c8f1e7",
    "metadata": {
     "ExecuteTime": {
@@ -37,7 +37,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://3f21625acb8f:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://10fdb633d456:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -53,10 +53,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f905a3dc040>"
+       "<pyspark.sql.session.SparkSession at 0x7fde2c908fa0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "322e25c7-4b2c-45d3-8125-2f632e237c38",
    "metadata": {},
    "outputs": [],
